Initial app created

--- a/InstagramApiExperiment/appsettings.Development.json
+++ b/InstagramApiExperiment/appsettings.Development.json
@@ -6,5 +6,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "ClientId": "2f03d7167b684251bfa0f8166ba15a5a",
+  "RedirectUri": "http://localhost:9159/",
+  "INSTAPPCLIENTSECRET": "<set>"
 }
